# remote-backup-m1-client

./: CMakeLists.txt  Directory.cpp  Directory.h  FileWatcher.cpp  FileWatcher.h  LockedDirectory.cpp  LockedDirectory.h  Metadata.cpp  Metadata.h  Operation.cpp  Operation.h  PendingOperationsQueue.cpp  PendingOperationsQueue.h  README.md  SSL_Connection.cpp  SSL_Connection.h  Socket.cpp  Socket.h  TLV.cpp  TLV.h  WatchedDirectory.cpp  WatchedDirectory.h  connection.cpp  connection.h  dir.cpp  dir.h  dir2.cpp  dir2.h  f_message.cpp  f_message.h  file_watcher.cpp  file_watcher.h  main.cpp  message.cpp  message.h  message_queue.cpp  message_queue.h  meta.cpp  meta.h  op.cpp  (+13 more)
communication/: f_message.h  message.h  tlv_view.h  types.h
core/: connection.cpp  connection.h  file_watcher.cpp  file_watcher.h  scheduler.cpp  scheduler.h  user.cpp  user.h
directory/: dir.cpp  dir.h  resource.cpp  resource.h
utilities/: tools.cpp  tools.h
